--- a/appointment.html
+++ b/appointment.html
@@ -68,7 +68,7 @@
    
   <!-- Header Small and medium Screen only  -->
   
-  <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
     <a class="navbar-brand" href="index.html">
       <img src="assets/img/logo.png" alt="">
     </a>
