--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -79,7 +79,7 @@
   <!-- Header Small and medium Screen only  -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -88,33 +88,38 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="ps-2 ml-auto justify-content-between">
-      <a class="nav-item nav-link" href="male.html" id="navlink2">
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+      <!-- <a class="nav-item nav-link" href="male.html" id="navlink2">
         <img src="assets/img/menscilinicfinallogo.png" alt="">
-
-      </a>
-      <a class="nav-item nav-link" href="#" id="navlink2">
+      </a> -->
+      <!-- <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
-      </a> 
-      <a class="nav-item nav-li" href="#" id="navlink2">
-        <div class="dropdown show ms-4">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
-             SERVICES
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
-            <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
-            <a class="dropdown-item" href="male.html">Male</a>
-            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+      </a>  -->
+      <div class="row mt-3">
+          <div class="col-6 mt-2"> 
+              <a class="nav-item nav-li" href="#" id="navlink2">
+                <div class="dropdown show ms-4">
+                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+                    SERVICES
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                    <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+                    <a class="dropdown-item" href="male.html">Male</a>
+                    <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+                  </div>
+                </div>
+              </a>
           </div>
-        </div>
-      </a>         
-      <a class="nav-item nav-link" href="appointment.html" id="navlink2">
-        <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
-      </a>
+        <div class="col-6"> 
+          <a class="nav-item nav-link" href="appointment.html" id="navlink2">
+            <button type="button" class="btn btn-primary" style="background-color: #036DA4;">APPOINTMENT</button>
+          </a>
+      </div>
+      </div>
+      
     </div>
   </div>
 </nav>
