--- a/index.html
+++ b/index.html
@@ -144,59 +144,79 @@
 <!-- Header Small and medium Screen only  -->
 
 <nav class="navbar  navbar-light d-block d-md-block d-lg-none shadow"  >
-  <a class="navbar-brand me-5" href="index.html">
-    <img src="assets/img/logo.png" alt="">
-  </a>
-  <span></span>
-  <button class="navbar-toggler ms-5" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="row">
+    <div class="col-4"> 
+      <a class="navbar-brand me-5" href="index.html">
+        <img src="assets/img/logo.png" alt="" height="60"  width="130">
+      </a>
+    </div>
+    <div class="col-4"> 
+      <a class="nav-item nav-link" href="male.html" id="navlink2">
+        <img src="assets/img/menscilinicfinallogo.png" alt="" height="60"  width="150">
+      </a>
+    </div>
+    <div class="col-4"> 
+      <span></span>
+      <button class="navbar-toggler ms-5" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="ps-2 ml-auto justify-content-between">
-      <a class="nav-item nav-link" href="male.html" id="navlink2">
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+      <!-- <a class="nav-item nav-link" href="male.html" id="navlink2">
         <img src="assets/img/menscilinicfinallogo.png" alt="">
-      </a>
-      <a class="nav-item nav-link" href="#" id="navlink1">
+      </a> -->
+      <!-- <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2 text-dark">+79979901881</h5>
         </div>
-      </a>
-      <a class="nav-item nav-link mt-2" href="index.html" id="navlink2" style="margin-top: -4%;">
-        <h5>Home</h5>
-      </a>
-      <a class="nav-item nav-link mt-2 text-dark" href="about.html" id="navlink3">
-        <h5>About</h5>
-      </a>
-      <a class="nav-item nav-link mt-2 text-dark" href="#ourservices" id="navlink4">
-        <h5>Services</h5>
-      </a>
-      <a class="nav-item nav-link mt-2 text-dark" href="gallery.html" id="navlink5">
-        <h5>Gallery</h5>
-      </a>
-      <a class="nav-item nav-link mt-2 text-dark" href="contact.html" id="navlink6">
-        <h5>Contact</h5>
-      </a>
-      <a class="nav-item nav-link mt-2 text-dark" href="#" id="navlink6">
-        <!-- <h5>Contact</h5> -->
-        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-          <img src="assets/img/facebook.png" alt="Facebook">
-      </a>
-      <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
-        <img src="assets/img/icons8-youtube-48.png" alt="">
-      </a>
-      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-        <img src="assets/img/icons8-instagram-48.png" alt="">
-      </a>
-      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-        <img src="assets/img/gmail.png" alt="">
-      </a>
-      </a>
-      <a class="nav-item nav-link mt-2 pt-4" href="appointment.html" id="navlink7">
-        <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
-      </a>
+      </a> -->
+      <div class="row"> 
+          <div class="col-6"> 
+            <a class="nav-item nav-link mt-2" href="index.html" id="navlink2" style="margin-top: -4%;">
+              <h5>Home</h5>
+            </a>
+            <a class="nav-item nav-link mt-2 text-dark" href="about.html" id="navlink3">
+              <h5>About</h5>
+            </a>
+            <a class="nav-item nav-link mt-2 text-dark" href="#ourservices" id="navlink4">
+              <h5>Services</h5>
+            </a>
+            <a class="nav-item nav-link mt-2 text-dark" href="gallery.html" id="navlink5">
+              <h5>Gallery</h5>
+            </a>
+            <a class="nav-item nav-link mt-2 text-dark" href="contact.html" id="navlink6">
+              <h5>Contact</h5>
+            </a>
+        </div>
+        <div class="col-6 ps-5"> 
+            <a class="nav-item nav-link mt-2 text-dark" href="#" id="navlink6">
+              <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+                <img src="assets/img/facebook.png" alt="Facebook">
+            </a>
+            <br>
+            <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
+              <img src="assets/img/icons8-youtube-48.png" alt="">
+            </a>
+            <br>
+            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+              <img src="assets/img/icons8-instagram-48.png" alt="">
+            </a>
+            <br>
+            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+              <img src="assets/img/gmail.png" alt="">
+            </a>
+            </a>         
+        </div>
+        <div class="appoiment text-center">
+          <a class="nav-item nav-link mt-2 pt-4 text-center d-flex justify-content-center" href="appointment.html" id="navlink7">
+            <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
+          </a> 
+        </div>  
+    </div>
     </div>
   </div>
 </nav>
@@ -517,7 +537,7 @@
 
   <!-- VAGINAL REJUVENATION -->
 
-  <section id="vaginal-rejuvenation">
+  <section id="vaginal-rejuvenation" class="d-none d-md-block d-lg-block">
     <div class="container-fluid Vaginalrejuvenation p-5">
       <div class="container">
         <h1 class="text-center">Our services</h1>
@@ -573,7 +593,7 @@
                   </div>
                   </div>
                   </div>
-                    <a href="femalenonsurgical.html" class="btn btn-dark">Click Here</a>
+                    <a href="femalenonsurgical.html" class="btn btn-dark mt-3 mb-3">Click Here</a>
                   </div>
                 </div>
               </div>
@@ -595,7 +615,7 @@
                     <li><a href="femalesurgical.html#clitoral-hood-reduction">Clitoral hood reduction</a></li>
                     <li><a href="femalesurgical.html#clitoral-unhooding">Clitoral unhooding</a></li>
                     <li><a href="femalesurgical.html#monsplaty">Monsplasty </a></li>
-                    <a href="femalesurgical.html" class="btn btn-dark">Click Here</a>
+                    <a href="femalesurgical.html" class="btn btn-dark mt-3 mb-3">Click Here</a>
                   </div>
                 </div>
               </div>
@@ -614,7 +634,7 @@
                     <li><a href="male.html#erectile-dysfunction">Erectile Dysfunction</a></li>
                     <li><a href="male.html#urine-incontinence">Urine Incontinence</a></li>
                     <li><a href="male.html#premature-ejaculation">Premature Ejaculation</a></li>
-                    <a href="male.html" class="btn btn-dark">Click Here</a>
+                    <a href="male.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
                   </div>
                 </div>
               </div>
@@ -634,7 +654,7 @@
                     <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy">Focused Extracorporeal Shockwave Therapy</a></li>
                     <li><a href="ExectileDysfunctionProcedure.html#hifem-chair">HIFEM Chair (Emsella Chair)</a></li>
                     <li><a href="ExectileDysfunctionProcedure.html#p-shot">P-Shot</a></li>
-                    <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark">Click Here</a>
+                    <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
                   </div>
                 </div>
               </div>
@@ -663,7 +683,7 @@
               <video src="assets/img/home_video.mp4" width="100%" autoplay loop muted></video>
             </div>
 
-            <div id="additionalContent1" style="display: none;">
+            <div id="additionalContent1" style="display: none;" >
               <!-- Additional content for the first accordion -->
               <h1 class="text-center mb-3">Female Non Surgical</h1>
               <img src="assets/img/services 1.png" alt="" class="img-fluid mb-4">
@@ -699,7 +719,10 @@
             <div id="additionalContent4" style="display: none;">
               <!-- Additional content for the fourth accordion -->
               <h1 class="mb-3">Erectile Dysfunction Procedure</h1>
-              <img src="assets/img/services4.png" alt="" class="img-fluid mb-4">z
+              <div class="smallandmedium"> 
+                  <h3 class="mb-3">Erectile Dysfunction Procedure</h3>
+              </div>
+              <img src="assets/img/services4.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital, we pride ourselves on offering cutting-edge medical care supported by advanced equipment. Our state-of-the-art facilities include diagnostic tools like MRI and CT scanners, ensuring precise and comprehensive imaging. From high-tech surgical instruments to modern patient monitoring systems, we are committed to providing the best in healthcare. Our investment in advanced equipment reflects our dedication to delivering accurate diagnoses, effective treatments, and compassionate care.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -712,6 +735,143 @@
       </div>
   </section>
   <!--  ENDING  VAGINAL REJUVENATION -->
+  
+  <!-- VAGINAL REJUVENATION  FOR SMALL SCREEN ONLY  -->
+
+  <section id="vaginal-rejuvenation" class="d-block d-md-none d-lg-none">
+    <div class="container-fluid Vaginalrejuvenation p-5">
+      <div class="container">
+        <h1 class="text-center">Our services</h1>
+        <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
+        <div class="row">
+          <div class="col-lg-6 col-sm-12 col-md-12">
+            <!--  BOOTSTRAP ACCORDION -->
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                    aria-controls="panelsStayOpen-collapseOne">
+                    FEMALE (NON SURGICAL)
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                  aria-labelledby="panelsStayOpen-headingOne">
+                  <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
+                  <div class="container">
+                    <div class="row"> 
+                     <div class="col-lg-6"> 
+                        <!-- <li>Vaginal Rejuvenation</li> -->
+                        <li><a href="femalenonsurgical.html#vaginal-rejuvenation">Vaginal Rejuvenation</a></li>
+                        <li><a href="femalenonsurgical.html#urinary-incontinence">Urinary Incontinence</a></li>
+                        <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness & Infection</a></li>
+                        <li><a href="femalenonsurgical.html#vaginal-discharge">Vaginal Discharge </a></li>
+                        <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery Rehabilitation </a></li>
+                        <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
+                        <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
+                        <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual Dysfunction </a></li>
+                        <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
+                        <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
+                        <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
+                        <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
+                        <li><a href="femalenonsurgical.html#strech-mark-management">Strech Mark Management </a></li>
+                    </div>
+                    <div class="col-lg-6"> 
+                        <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
+                        <li><a href="femalenonsurgical.html#facial-rejuvenation">Facial </a>Rejuvenation</li>
+                        <!-- <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li> -->
+                        <li><a href="femalenonsurgical.html#hair-loss-treatments">Hair Loss Treatments </a></li>
+                        <li><a href="femalenonsurgical.html#prp">PRP </a></li>
+                        <li><a href="femalenonsurgical.html#mommy-make-over">Mommy Make Over </a></li>
+                        <li><a href="femalenonsurgical.html#under-arm-peels">Underarm Peels </a></li>
+                        <!-- <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li> -->
+                        <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
+                        <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
+                        <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet Rejuvenation </a> </li>
+                        <li><a href="femalenonsurgical.html#tattoo-removal">Tattoo Removal </a></li>
+                        <li><a href="femalenonsurgical.html#menopause">Menopause </a> </li>
+                        <li><a href="femalenonsurgical.html#ankle-scar-management">Scar Management</a> </li>
+                  </div>
+                  </div>
+                  </div>
+                    <a href="femalenonsurgical.html" class="btn btn-dark mt-3 mb-3">Click Here</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseTwo">
+                    FEMALE (SURGICAL)
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingTwo">
+                  <div class="accordion-body" style="background-color: #046BA3; color: #ffff;">
+                    <li><a href="femalesurgical.html#hymenoplasty">Hymenoplasty</a></li>
+                    <li><a href="femalesurgical.html#labiominoraplasty">Labiominoraplasty</a></li>
+                    <li><a href="femalesurgical.html#labiomajoraplasty">Labiomajoraplasty</a></li>
+                    <li><a href="femalesurgical.html#clitoral-hood-reduction">Clitoral hood reduction</a></li>
+                    <li><a href="femalesurgical.html#clitoral-unhooding">Clitoral unhooding</a></li>
+                    <li><a href="femalesurgical.html#monsplaty">Monsplasty </a></li>
+                    <a href="femalesurgical.html" class="btn btn-dark mt-3 mb-3">Click Here</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseThree">
+                    MALE
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingThree">
+                  <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
+                    <li><a href="male.html#erectile-dysfunction">Erectile Dysfunction</a></li>
+                    <li><a href="male.html#urine-incontinence">Urine Incontinence</a></li>
+                    <li><a href="male.html#premature-ejaculation">Premature Ejaculation</a></li>
+                    <a href="male.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseFour">
+                    Erectile Dysfunction Procedure
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingFour">
+                  <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
+
+                    <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy">Focused Extracorporeal Shockwave Therapy</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#hifem-chair">HIFEM Chair (Emsella Chair)</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#p-shot">P-Shot</a></li>
+                    <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  ENDING BOOTSTRAP  ACCORDION -->
+          <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
+            <div id="videoContent" style="display: block;" >
+              <video src="assets/img/home_video.mp4" width="100%" autoplay loop muted></video>
+            </div> 
+          </div>
+
+        </div>
+      </div>
+  </section>
+  <!--  ENDING  VAGINAL REJUVENATION  FOR SMALL SCREEN ONLY -->
 
   <!--  FOOTER -->
 
